--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
     "strict": true,
     "module": "CommonJS",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "index.test.ts"
   ]
 }
