--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "alwaysStrict": true,
     "strict": true,
     "module": "CommonJS",
-    "target": "es5",
+    "target": "ES2020",
     "sourceMap": true,
     "declaration": true
   },
